# pysgn

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: asking-help.md  bug-report.md  feature-request.md
.github/workflows/: build.yml  ci.yml  draft-pdf.yml  release.yml
docs/: Makefile  advanced_options_performance.ipynb  conf.py  getting_started.ipynb  index.md  network_models_ws_ba.ipynb  utilities.ipynb  utils.ipynb
docs/apis/: api_main.md  geo_barabasi_albert_network.rst  geo_erdos_renyi_network.rst  geo_watts_strogatz_network.rst  ordering.rst  utils.rst
paper/: paper.bib  paper.md
pysgn/: __init__.py  geo_barabasi_albert_network.py  geo_erdos_renyi_network.py  geo_watts_strogatz_network.py  ordering.py  small_world_network.py  utils.py
tests/: test_geo_barabasi_albert_network.py  test_geo_erdos_renyi_network.py  test_geo_watts_strogatz_network.py  test_ordering.py  test_small_world_network.py  test_utils.py
